# mine-idler

./: Cargo.toml  Dockerfile  Justfile  README.md  buf.gen.yaml  build.rs  default-config.yml
frontend/: .gitignore  Justfile  index.d.ts  package.json  tsconfig.json
frontend/src/: api.ts  app.css  app.html  sentry.ts  state.ts
frontend/src/components/: BackToOverviewButton.svelte
frontend/src/components/Base/: UpgradeCost.svelte  UpgradeModal.svelte
frontend/src/components/Common/: GlobalToaster.svelte  GlobalToaster.ts  Modal.svelte  TabList.svelte
frontend/src/components/Gamble/GambleSession/: GambleSession.svelte  InventoryTable.svelte  InventoryTableRow.svelte
frontend/src/components/Hiscores/: Hiscores.svelte
frontend/src/components/Inventory/: AggItemStats.svelte  AggregateView.svelte  CardsList.svelte  Inventory.svelte  ItemCard.svelte  QualityHistogram.svelte
frontend/src/components/Mine/: MineHome.svelte  types.ts
frontend/src/components/Mine/MineSession/: LootTable.svelte  LootTableRow.svelte  (+2 more)
frontend/src/components/Overview/: Overview.svelte
frontend/src/lib/: AppRoute.ts  item.ts
frontend/src/protos/: mine_connect.ts  mine_pb.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/app/: +layout.svelte  +page.svelte  MainApp.svelte
migrations/: 20240404224820_init.down.sql  20240404224820_init.up.sql  20240410064401_base.down.sql  20240410064401_base.up.sql  20240413214913_base-uniq-fix.down.sql  20240413214913_base-uniq-fix.up.sql
protos/: mine.proto
src/: auth.rs  conf.rs  main.rs  metrics.rs  protos.rs  server.rs
src/db/: mod.rs
src/game/: gamble_locations.yml  gambling_locations.yml  items.rs  mine.rs  mine_locations.yml  mod.rs  upgrades.rs
src/game/item_tables/: loot.yml
src/game/loot_tables/: starter.yml
(+5 files in other folders)
