[package]
name = "mine-idler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.11", features = ["channel", "gzip", "prost"] }
prost = "0.12"
futures = "0.3"

[build-dependencies]
tonic-build = { version = "0.11", features = ["prost"] }
