[package]
name = "mine-idler"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.11", features = ["channel", "gzip", "prost"] }
prost = "0.12"
futures = "0.3"
scrypt = "0.11.0"
foundations = { version = "3.3", default-features = false, features = [
  "settings",
  "metrics",
  "telemetry-server",
  "tokio-runtime-metrics",
  "cli",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_default_utils = "0.2"
tokio = { version = "1.36", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "chrono", "uuid", "postgres", "json"] }
once_cell = "1.8"
anyhow = "1.0"
tonic-middleware = "0.1"
async-trait = "0.1"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }
tonic-web = "0.11"
chrono = "0.4"
base64 = "0.22"
serde_yaml = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-stream = "0.1"
rand = "0.8"
rand_distr = "0.4"
pcg_rand = "0.13"
dashmap = "5.5"
lazy_static = "1.4"
fxhash = "0.2"
uuid = { version = "1.8", features = ["v4"] }

[target.'cfg(not(target_os = "windows"))'.dependencies.foundations]
version = "3.3"
default-features = false
features = [
  "settings",
  "metrics",
  "telemetry-server",
  "jemalloc",
  "tokio-runtime-metrics",
  "cli",
]

[build-dependencies]
tonic-build = { version = "0.11", features = ["prost"] }
